--- a/app/views/breeds/_search.html.erb
+++ b/app/views/breeds/_search.html.erb
@@ -1,6 +1,6 @@
 <%= form_with(url: {:controller => locals[:controller], :action => locals[:action]}, method: "GET") do |f| %>
   <div class="row">
-    <div class="col s10 offset-s1 m6 offset-m3">
+    <div class="col s10 offset-s1 m8 offset-m2 ml8 offset-ml2 l6 offset-l3">
       <div class="input-field">
         <button class="reset-dropdown circle">
           <i class="material-icons">restore</i>
