--- a/app/views/breeds/index.html.erb
+++ b/app/views/breeds/index.html.erb
@@ -22,7 +22,7 @@
     </div>
   </div>
 
-  <div id="breeds">
+  <div id="breeds" class="row">
     <%= render partial: 'page_items' %>
   </div>
 </div>
