--- a/app/views/pairs/_form.html.erb
+++ b/app/views/pairs/_form.html.erb
@@ -40,7 +40,7 @@
 
   <div class="row">
     <div class="col">
-      <%= link_to 'javascript:history.back()', class:"waves-effect waves-light btn left" do %>
+      <%= link_to overview_cattery_path(@user), class:"waves-effect waves-light btn left" do %>
         <i class="material-icons left">keyboard_arrow_left</i>
         <%= t('buttons.back') %>
       <% end %>
