--- a/app/javascript/stylesheets/application.scss
+++ b/app/javascript/stylesheets/application.scss
@@ -2,6 +2,7 @@
 @import 'materialize-css/dist/css/materialize';
 @import 'base/variables';
 @import 'base/media-queries';
+@import 'base/layout';
 @import 'base/base';
 
 // Modules
