--- a/app/views/cats/_form.html.erb
+++ b/app/views/cats/_form.html.erb
@@ -50,7 +50,7 @@
 
     <div class="col s12 m6 l4">
       <div class="input-field">
-        <%= f.select(:color_id, options_for_select(@colors_array, selected: f.object ? f.object.color_id : ""), {selected: "", disabled: "", prompt: "#{t('cat_info.color')} *"}, { autocomplete:'off' }) %>
+        <%= f.select(:color_id, options_for_select(@colors_array, selected: f.object ? f.object.color_id : ""), {selected: "", disabled: "", prompt: "#{t('cat_info.dominant_color')} *"}, { autocomplete:'off' }) %>
       </div>
       <%= render 'shared/error_messages', object: @cat, field: :color_id %>
     </div>
