--- a/app/views/cats/_page_items.html.erb
+++ b/app/views/cats/_page_items.html.erb
@@ -1,46 +1,32 @@
-<% @kittens.each_slice(4) do |slice| -%>
-  <div class="row">
+<% @kittens.each_slice(2) do |slice| -%>
+  <div class="index-row">
     <% slice.each do |cat| %>
-      <div class="col s10 offset-s1 m6 l3">
+      <div class="col s10 offset-s1 m6 ml6 l3">
         <%= link_to cat_path(cat), target:"_blank" do %>
           <div class="card">
             <div class="card-image">
               <%= image_tag(cat.thumbnail, alt:"#{Breed.find(cat.breed_id).name} kitten") %>
               <% if !cat.name.blank? %>
-                <span class="card-title"><%= cat.name %></span>
+                <span class="card-title"><%= capitalized_name(cat) %></span>
               <% end %>
             </div>
             <div class="card-content">
-              <div class="info-block">
-                <div class="row">
-                  <div class="col s4">
-                    <span class="info-title"><%= t('breed', count: 1) %>:</span>
-                  </div>
-                  <div class="col s8">
-                    <span class="info-text"><%= t("breeds.#{cat_breed(cat).breed_code}.name") %></span>
-                  </div>
-                </div>
-              </div>
-              <div class="info-block">
-                <div class="row">
-                  <div class="col s4">
-                    <span class="info-title"><%= t('cat_info.gender') %>:</span>
-                  </div>
-                  <div class="col s8">
-                    <span class="info-text"><%= cat_gender(cat).capitalize %></span>
-                  </div>
-                </div>
-              </div>
-              <div class="info-block">
-                <div class="row">
-                  <div class="col s4">
-                    <span class="info-title"><%= t('cat_info.cattery') %>:</span>
-                  </div>
-                  <div class="col s8">
-                    <span class="info-text"><%= cattery(cat).cattery_name %></span>
-                  </div>
-                </div>
-              </div>
+              <table>
+                <tbody>
+                  <tr class="info-block">
+                    <td class="info-title"><%= t('breed', count: 1) %>:</td>
+                    <td class="info-text"><%= t("breeds.#{cat_breed(cat).breed_code}.name") %></td>
+                  </tr>
+                  <tr class="info-block">
+                    <td class="info-title"><%= t('cat_info.gender') %>:</td>
+                    <td class="info-text"><%= cat_gender(cat).capitalize %></td>
+                  </tr>
+                  <tr class="info-block">
+                    <td class="info-title"><%= t('cat_info.cattery') %>:</td>
+                    <td class="info-text"><%= cattery(cat).cattery_name %></td>
+                  </tr>
+                </tbody>
+              </table>
             </div>
           </div>
         <% end %>
