--- a/app/views/users/_cattery_kittens.html.erb
+++ b/app/views/users/_cattery_kittens.html.erb
@@ -1,80 +1,62 @@
-<% @kittens.each do |cat| %>
-  <div class="col s10 offset-s1 m6 l3">
-    <div class="card">
-      <div class="card-image">
-        <%= link_to cat_path(cat) do %>
-          <%= image_tag(cat.thumbnail, alt:"#{Breed.find(cat.breed_id).name} kitten") %>
-          <% if !cat.name.blank? %>
-            <span class="card-title"><%= cat.name %></span>
-          <% end %>
-        <% end %>
-        <% if user_signed_in? && current_user == @user %>
-          <%= link_to edit_cat_path(cat, form: "kitten"), class:"btn-floating halfway-fab waves-effect waves-light btn-large" do %>
-            <i class="material-icons">edit</i>
-          <% end %>
-        <% end %>
-      </div>
-      <%= link_to cat_path(cat) do %>
-        <div class="card-content">
-          <div class="info-block">
-            <div class="row">
-              <div class="col s4">
-                <span class="info-title"><%= t('breed', count: 1) %>:</span>
-              </div>
-              <div class="col s8">
-                <span class="info-text"><%= t("breeds.#{cat_breed(cat).breed_code}.name") %></span>
-              </div>
-            </div>
+<% @kittens.each_slice(2) do |slice| -%>
+  <div class="index-row">
+    <% slice.each do |cat| %>
+      <div class="col s10 offset-s1 m6 ml6 l3">
+        <div class="card">
+          <div class="card-image">
+            <%= link_to cat_path(cat) do %>
+              <%= image_tag(cat.thumbnail, alt:"#{Breed.find(cat.breed_id).name} kitten") %>
+              <% if !cat.name.blank? %>
+                <span class="card-title"><%= capitalized_name(cat) %></span>
+              <% end %>
+            <% end %>
+            <% if user_signed_in? && current_user == @user %>
+              <%= link_to edit_cat_path(cat, form: "kitten"), class:"btn-floating halfway-fab waves-effect waves-light btn-large" do %>
+                <i class="material-icons">edit</i>
+              <% end %>
+            <% end %>
           </div>
-          <div class="info-block">
-            <div class="row">
-              <div class="col s4">
-                <span class="info-title"><%= t('cat_info.gender') %>:</span>
-              </div>
-              <div class="col s8">
-                <span class="info-text"><%= cat_gender(cat).capitalize %></span>
-              </div>
-            </div>
-          </div>
-          <div class="info-block">
-            <div class="row">
-              <div class="col s4">
-                <span class="info-title"><%= t('cat_info.birth_date') %>:</span>
-              </div>
-              <div class="col s8">
-                <span class="info-text"><%= format_birth_date(cat) %></span>
-              </div>
-            </div>
-          </div>
-          <div class="info-block">
-            <div class="row">
-              <div class="col s4">
-                <span class="info-title"><%= t('cat_info.parents') %>:</span>
-              </div>
-              <div class="col s8">
-                <span class="info-text">
-                  <%= kitten_parents(cat) %>
-                </span>
-              </div>
-            </div>
-          </div>
-          <div class="info-block">
-            <div class="row">
-              <div class="col s12">
-                <div class="info-available">
-                  <% if cat.is_available %>
-                    <i class="material-icons check">check</i>
-                    <span class="available-text"><%= t('cat_info.available') %></span>
-                  <% else %>
-                    <i class="material-icons close">close</i>
-                    <span class="unavailable-text"><%= t('cat_info.unavailable') %></span>
-                  <% end %>
+          <%= link_to cat_path(cat) do %>
+            <div class="card-content">
+              <table> 
+                <tbody>
+                  <tr class="info-block">
+                    <td class="info-title"><%= t('breed', count: 1) %>:</td>
+                    <td class="info-text"><%= t("breeds.#{cat_breed(cat).breed_code}.name") %></td>
+                  </tr>
+                  <tr class="info-block">
+                    <td class="info-title"><%= t('cat_info.gender') %>:</td>
+                    <td class="info-text"><%= cat_gender(cat).capitalize %></td>
+                  </tr>
+                  <tr class="info-block">
+                    <td class="info-title"><%= t('cat_info.birth_date') %>:</td>
+                    <td class="info-text"><%= format_birth_date(cat) %></td>
+                  </tr>
+                  <tr class="info-block">
+                    <td class="info-title"><%= t('cat_info.parents') %>:</td>
+                    <td class="info-text"><%= kitten_parents(cat) %></td>
+                  </tr>
+                </tbody>
+              </table>
+              <div class="info-block">
+                <div class="row">
+                  <div class="col s12">
+                    <div class="info-available">
+                      <% if cat.is_available %>
+                        <i class="material-icons check">check</i>
+                        <span class="available-text"><%= t('cat_info.available') %></span>
+                      <% else %>
+                        <i class="material-icons close">close</i>
+                        <span class="unavailable-text"><%= t('cat_info.unavailable') %></span>
+                      <% end %>
+                    </div>
+                  </div>
                 </div>
               </div>
             </div>
-          </div>
+          <% end %>
         </div>
-      <% end %>
-    </div>
+      </div>
+    <% end %>
   </div>
 <% end %>
